<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="c">C</string>
    <string name="abrir_chaves">(</string>
    <string name="fechar_chaves">)</string>
    <string name="barra">/</string>
    <string name="_7">7</string>
    <string name="numero_oito">8</string>
    <string name="_9">9</string>
    <string name="asteristico">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="Soma">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Subtração">-</string>
    <string name="btn_ac">AC</string>
    <string name="_0">0</string>
    <string name="btn_ponto">.</string>
    <string name="btn_igual">=</string>
</resources>