<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_layout"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="54sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:id="@+id/buttons_layout"
        android:background="#1D3C3939">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonC"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/c"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/abre_chaves"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/abrir_chaves"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fechar_chaves"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/fechar_chaves"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_barra"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/barra"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button7"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/_7"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/numero_oito"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/numero_oito"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/numero_nove"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/_9"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiplicação"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/asteristico"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/numero_4"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/_4"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/numero_cinco"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/_5"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/numero_seis"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/_6"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/soma"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/Soma"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/numero_um"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/_1"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/numero_dois"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/_2"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/numero_tres"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/_3"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/subtração"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/Subtração"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_AC"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/btn_ac"
                android:textSize="17sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/numero_zero"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/_0"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ponto"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/btn_ponto"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_igual"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/btn_igual"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>